transform imgs and used css prop overflow to make sure the pics dont get bigger than browser window

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -195,6 +195,11 @@ header {
 /* Meals */
 /* ---------------------------------------------------*/
 
+.section-meals {
+  padding: 0;
+}
+
+
 .meals-showcase {
   list-style: none;
   width: 100%;
@@ -209,9 +214,11 @@ header {
 .meal-photo {
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 .meal-photo img {
   width: 100%;
-  
+  height: auto;
+  transform: scale(1.15);
 }
